Updated html for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -13,28 +13,35 @@
 <!-- Header and Navigation bar -->
   
 <header>
-  <nav class="desktop">
+  <nav>
     <!-- left logo -->
     <div class="logo">
       <a href="#">
         <img src="./resources/images/beanboardLogo.png" class="logo"alt="company logo image">
       </a>
     </div>
-    <!-- centered menu -->
-    <div class="midNav">
-      <ul>
-        <li><a href="#">token</a></li>
-        <li><a href="#">whitepaper</a></li>
-        <li><a href="#">about</a></li>
-        <li><a href="#">community</a></li>
-      </ul>
-    </div>
-    <!-- right button -->
-    <div class="loginNav">
-      <ul>
-        <li><a href="#" class="button">login</a></li>
-      </ul>
-    </div>
+    <!-- desktop navigation -->
+    <div class="desktop">
+      <!-- centered menu -->
+      <div class="midNav">
+        <ul>
+          <li><a href="#">token</a></li>
+          <li><a href="#">whitepaper</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">community</a></li>
+        </ul>
+      </div>
+      </div>
+      <!-- right button -->
+      <div class="loginNav">
+        <div class="login">
+          <a href="#">login</a>
+        </div>
+        <div class="signupButton">  
+        <a href="#" class="button" id="filledButton">sign up</a>
+        </div>
+      
+  </div>
   </nav>
   <!-- mobile navigation  -->
   <nav class="mobile">
@@ -58,7 +65,7 @@
           <h3>grow, expand & evolve your business with <span>$BEAN</span></h3>
           <h3>counting your beans doesn't have to be a grind</h3>
          <div>
-          <a href="#" id="statemenetButton" class="button">signup</a>
+          <a href="#" id="statementButton" class="button">sign up</a>
         </div>      
         </div> 
     </div>
@@ -85,7 +92,7 @@
                 </div>
             </div>
         </div>
-        <div> 
+        <div class="imageCenter"> 
             <img src="./resources/images/productImage1.png" alt="">
         </div>
     </div> 
@@ -133,7 +140,7 @@
                 </div>
             </div> 
         </div>
-        <div> 
+        <div class="imageCenter"> 
             <img src="./resources/images/productImage3.png" class="learnImage" alt="">
         </div>
     </div>
@@ -152,11 +159,12 @@
 
         <!-- Person 1 -->
 
-        <div class="gridCardFirst">
+        <div class="gridCardFrist">
             <div class="cardCenter">
                 <img src="./resources/images/person1.png" alt="">
                 <h4>Nicholas Harper</h4>
-                <p>I’ve heard the argument that “lorem ipsum” is effective in wireframing or design because it helps people focus on the actual layout, or color scheme, or whatever. What kills me here is that we’re talking about creating a user experience that will (whether we like it or not) be DRIVEN by words. The entire structure of the page or app flow is FOR THE WORDS.</p>
+                <p><strong>Cheif Executive Officer</strong><p>
+                <p>Nicholas is beanboard's Chief Executive Officer, leading the company as it builds a platform that empowers creative entrepreneurs around the world. He is also a member of beanboard's board of directors.</p>
             </div>
         </div>
 
@@ -166,7 +174,8 @@
             <div class="cardCenter">
                 <img src="./resources/images/person2.png" alt="">
                 <h4>William Taylor</h4>
-                <p>I’ve heard the argument that “lorem ipsum” is effective in wireframing or design because it helps people focus on the actual layout, or color scheme, or whatever. What kills me here is that we’re talking about creating a user experience that will (whether we like it or not) be DRIVEN by words. The entire structure of the page or app flow is FOR THE WORDS.</p>
+                <p><strong>Chief Techonology Officer</strong><p>
+                <p>Will is beanboard's Chief Technology Officer, setting our technology strategy and helping to further scale our global platform.</p>
             </div>
         </div>
 
@@ -176,7 +185,8 @@
             <div class="cardCenter">
                 <img src="./resources/images/person3.png" alt="">
                 <h4>Elizabeth Rose</h4>
-                <p>I’ve heard the argument that “lorem ipsum” is effective in wireframing or design because it helps people focus on the actual layout, or color scheme, or whatever. What kills me here is that we’re talking about creating a user experience that will (whether we like it or not) be DRIVEN by words. The entire structure of the page or app flow is FOR THE WORDS.</p>
+                <p><strong>Chief Financial Officer</strong><p>
+                <p>Liz is beanboard's CFO, bringing more than 30 years of senior financial experience to beanboard. She’s responsible for overseeing our global financial operations.</p>
             </div>
         </div>
     </div>
