updated html: removed mobile resp. bugs

--- a/index.html
+++ b/index.html
@@ -62,24 +62,36 @@
     <div class = "heroStatementBox">
         <div class="statementBox">
           <h2><span>energize</span> your web3 business</h2>
-          <h3>grow, expand & evolve your business with <span>$BEAN</span></h3>
-          <h3>counting your beans doesn't have to be a grind</h3>
-         <div>
+        </div>
+        <div class="heroImageMobile">
+            <img src="./resources/images/heroImage.png" alt="hand holding an iphone with the bean application open">
+        </div>
+        <div class="statementBox">
+            <h3>grow, expand & evolve your business with beanboard</h3>
+            <h3>counting your beans doesn't have to be a grind</h3>
+        </div>
+        <div>
           <a href="#" id="statementButton" class="button">sign up</a>
         </div>      
-        </div> 
-    </div>
+    </div> 
     <div class="heroImage">
       <img src="./resources/images/heroImage.png" alt="hand holding an iphone with the bean application open">
-    </div>
   </div>
+  </div>
+
 </div>
+
 
 <!-- Products -->
 <div class="products">
 
   <!-- AI metrics -->
     <div  class="productBlock">
+      <!-- mobile image -->
+      <div class="imageCenterMobile"> 
+        <img src="./resources/images/productImage1.png" alt="">
+      </div>
+      
         <div class="productText">
             <div class ="productBoarder">
                 <div class="productHeader">
@@ -121,6 +133,10 @@
   <!-- learn to earn -->
 
     <div  class="productBlock">
+      <!-- mobile image -->
+      <div class="imageCenterMobile"> 
+        <img src="./resources/images/productImage3.png" class="learnImage" alt="">
+    </div>
         <div class="productText">
             <div class ="productBoarder">
                 <div class="productHeader">
@@ -159,11 +175,11 @@
 
         <!-- Person 1 -->
 
-        <div class="gridCardFrist">
+        <div class="gridCardFirst">
             <div class="cardCenter">
                 <img src="./resources/images/person1.png" alt="">
                 <h4>Nicholas Harper</h4>
-                <p><strong>Cheif Executive Officer</strong><p>
+                <p><strong>Cheif Executive Officer</strong></p>
                 <p>Nicholas is beanboard's Chief Executive Officer, leading the company as it builds a platform that empowers creative entrepreneurs around the world. He is also a member of beanboard's board of directors.</p>
             </div>
         </div>
@@ -174,7 +190,7 @@
             <div class="cardCenter">
                 <img src="./resources/images/person2.png" alt="">
                 <h4>William Taylor</h4>
-                <p><strong>Chief Techonology Officer</strong><p>
+                <p><strong>Chief Techonology Officer</strong></p>
                 <p>Will is beanboard's Chief Technology Officer, setting our technology strategy and helping to further scale our global platform.</p>
             </div>
         </div>
@@ -185,7 +201,7 @@
             <div class="cardCenter">
                 <img src="./resources/images/person3.png" alt="">
                 <h4>Elizabeth Rose</h4>
-                <p><strong>Chief Financial Officer</strong><p>
+                <p><strong>Chief Financial Officer</strong></p>
                 <p>Liz is beanboard's CFO, bringing more than 30 years of senior financial experience to beanboard. She’s responsible for overseeing our global financial operations.</p>
             </div>
         </div>
@@ -195,6 +211,7 @@
 
 <!-- Footer -->
 <footer>
+  <!-- Desktop footer -->
 <div class="footLinks">
     <ul>
       <li><a href="#">token</a></li>
@@ -207,6 +224,21 @@
       </li>
     </ul>
   </div>
+
+<!-- Mobile Footer
+  <div class="footLinksMobile">
+    <ul>
+      <li><a href="#">token</a></li>
+      <li><a href="#">whitepaper</a></li>
+      <li><a href="#">twitter</a></li>
+      <li><a href="#">discord</a></li>
+      <li><a href="#">contact</a></li>
+      <li>
+        <p>👋</p>
+      </li>
+    </ul>
+  </div> -->
+
 </footer>
 
 </body>
