--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/resources/images/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="/styles.css">
-  <title>Beans</title>
+  <title>beanboard</title>
+  <meta property="og:image" content="/resources/images/favicon.png"/>  
+  <meta property="og:title" content="beanboard - growing web3 businesses together"/>  
 </head>
 <body>
 
